--- a/login.html
+++ b/login.html
@@ -16,7 +16,7 @@
     <img class="arrow" src="img/arrow.svg"/>
     <div class="login">
         <img class="logo" src="img/logo.svg"/>
-        <p style="font-weight: bold;color: #10C3F4;line-height: 17px;font-size:100%;">Вход в личный кабинет</p>
+        <p class="kek" style="font-weight: bold;color: #10C3F4;line-height: 17px;font-size:100%;">Вход в личный кабинет</p>
         <input class="login_input" type="text" placeholder="Идентификатор"/><br>
         <input class="login_input" type="password" placeholder="Пароль"/><br>
         <div class="check">
